update project template.